syntax = "proto3";
package main;
option go_package = "/z-proto/user;mainpb";


message RegisterRequest {
   string firstname = 1;
   string lastname = 2;
   string email = 3;
   string password = 4;
}
message UpdateRequest {
   int64 id = 1;
   string firstname = 2;
   string lastname = 3;
   string email = 4;
   string password = 5;
   int64 version = 6;
}
message UpdateResponse {
    int64 id = 1;
    int64 version = 2;
}
message RegisterResponse {
   bool created = 1;
}
message DeleteRequest {
  int64 id = 1;
}
message DeleteResponse {
  bool deleted = 1;
}
message ValidationRequest {
   string email = 1;
   string password = 2;
}
message ValidationResponse {
    int64 user_id = 1;
    bool  valid = 2;
    
    

}

service User {
  rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
  rpc UpdateUser (UpdateRequest) returns (UpdateResponse);
  rpc DeleteUser (DeleteRequest) returns (DeleteResponse);
  rpc ValidateCredential (ValidationRequest) returns (ValidationResponse);
}